@@ -1,25 +1,0 @@
-/* DO NOT EDIT! GENERATED AUTOMATICALLY! */
-#define PREFIX "/usr/local"
-#define EXEC_PREFIX "/usr/local"
-#define BINDIR "/usr/local/bin"
-#define SBINDIR "/usr/local/sbin"
-#define LIBEXECDIR "/usr/local/libexec"
-#define DATAROOTDIR "/usr/local/share"
-#define DATADIR "/usr/local/share"
-#define SYSCONFDIR "/usr/local/etc"
-#define SHAREDSTATEDIR "/usr/local/com"
-#define LOCALSTATEDIR "/usr/local/var"
-#define INCLUDEDIR "/usr/local/include"
-#define OLDINCLUDEDIR "/usr/include"
-#define DOCDIR "/usr/local/share/doc/texinfo"
-#define INFODIR "/usr/local/share/info"
-#define HTMLDIR "/usr/local/share/doc/texinfo"
-#define DVIDIR "/usr/local/share/doc/texinfo"
-#define PDFDIR "/usr/local/share/doc/texinfo"
-#define PSDIR "/usr/local/share/doc/texinfo"
-#define LIBDIR "/usr/local/lib"
-#define LOCALEDIR "/usr/local/share/locale"
-#define MANDIR "/usr/local/share/man"
-#define PKGDATADIR "/usr/local/share/texinfo"
-#define PKGINCLUDEDIR "/usr/local/include/texinfo"
-#define PKGLIBDIR "/usr/local/lib/texinfo"
